--- a/configuration.yaml
+++ b/configuration.yaml
@@ -44,13 +44,13 @@ groups:
   mac: b4-e6-2d-37-12-a7
   number: 14
 - degrees: 100
-  mac: b4-e6-2d-37-3f-e9
+  mac: dc-4f-22-19-a8-08
   number: 15
 - degrees: 100
   mac: dc-4f-22-18-d0-b3
   number: 16
 - degrees: 100
-  mac: de-ad-be-ef-00-00
+  mac: dc-4f-22-18-f6-4d
   number: 17
 - degrees: 100
   mac: de-ad-be-ef-00-01
